# TFG

./: .env  .gitignore  Benchmarking procedures.md  Cargo.toml  Dockerfile  LICENSE  NISQ List raw.md  Plantilla_TFG-PROYECTO(1).docx  README.md  bench  bench.ps1  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.md  run-benchmark.ps1  run-benchmark.sh  run.py  ~$antilla_TFG-PROYECTO(1).docx
.claude/commands/: add-and-commit.md
.github/workflows/: docker-build.yml
Docs/: Shors Algorithm.ipynb
Implementations/Python/qiskit/shor/: adder.py  shor.py
Python/qiskit/shor/: adder.py  adder_test.py  qft.py  qft_test.py  shor.py  shor_test.py
docker/: entrypoint.sh
docs/: architecture.md  benchmark_metrics.md  benchmarking_procedures.md  framework_analysis.md  framework_exclusions.md  implementation_guide.md  implementation_plan.md  supabase_schema.sql
docs/claude_exploration/: platform_compatibility.md  rust_frameworks_research.md
docs/notebooks/: Shors Algorithm.ipynb
hooks/: pre-push
lecciones/: 00_pipeline_general.md  01_algoritmo_grover.md  02_algoritmo_shor.md  03_framework_qiskit.md  04_framework_cirq.md  05_framework_cudaq.md  06_framework_qdislib.md  07_framework_q1tsim.md  08_framework_quantr.md  09_framework_quantrs2.md  10_framework_qcgpu.md  11_rust_para_simulacion_cuantica.md
python/: benchmark_core.py  hardware.py  smoke_test.py
python/cirq/: grover.py
python/cirq/shor/: modular_exp.py  shor.py
python/cudaq/: grover.py
python/cudaq/shor/: permutation.py  qft.py  shor.py
python/projectq/: grover.py
python/projectq/shor/: shor.py
python/qdislib/: grover.py
python/qdislib/shor/: shor.py
python/qiskit/: grover.py
python/qiskit/shor/: adder.py  shor.py
python/workers/: _base.py  cirq_worker.py  cudaq_worker.py  qdislib_worker.py  qiskit_worker.py
rust/q1tsim/: Cargo.toml  build.rs
rust/q1tsim/src/: grover.rs  lib.rs
rust/q1tsim/src/shor/: classical.rs  mod.rs  permutation.rs  qft.rs
rust/qcgpu/: Cargo.toml
rust/qcgpu/src/: grover.rs  lib.rs
rust/qcgpu/src/shor/: classical.rs  mod.rs  permutation.rs  qft.rs
rust/quantr/: Cargo.toml
rust/quantr/src/: grover.rs
rust/quantr/src/shor/: classical.rs  mod.rs  permutation.rs  qft.rs
rust/quantrs/: Cargo.toml
rust/quantrs/src/: grover.rs  lib.rs
rust/quantrs/src/shor/: classical.rs  mod.rs  permutation.rs  qft.rs
tests/cirq/: test_grover.py
tests/cirq/shor/: test_modular_exp.py  test_shor.py
tests/cudaq/: test_grover.py
tests/cudaq/shor/: test_permutation.py  test_qft.py  test_shor.py
tests/projectq/: test_grover.py  test_shor.py
tests/projectq/shor/: test_shor.py
tests/qdislib/: test_grover.py
tests/qdislib/shor/: test_shor.py
tests/qiskit/: test_grover.py
tests/qiskit/shor/: test_adder.py  test_qft.py  test_shor.py
