[project]
name = "tfg"
version = "0.1.0"
description = "Quantum computing library benchmarks"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy==2.2.4",
    "scipy==1.15.2",
    "qiskit==2.0.0",
    "qiskit-aer==0.17.0",
    "cirq>=1.6.1",
    "psutil>=5.9",
]

[project.optional-dependencies]
# x86_64-only: cudaq has no arm64 wheels; qdislib->pymetis requires gcc to build from source (no arm64 manylinux wheel, verified 2026-05-16)
x86only = [
    "cudaq>=0.14.0",
    "qdislib>=1.0.0",
    "pycompss",
]
# NVIDIA GPU acceleration (x86_64 only, requires CUDA 13)
gpu = [
    "cuda-quantum-cu13==0.14.0",
]
dev = [
    "pytest==8.3.5",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
exclude = ["memory/"]

[tool.ruff.lint]
per-file-ignores = {"tests/**/*.py" = ["E402"]}
