[package]
name = "q1tsim-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q1tsim-grover"
path = "src/bin/grover.rs"

[[bin]]
name = "q1tsim-shor"
path = "src/bin/shor.rs"

[dependencies]
q1tsim = "0.5"
num-integer = "0.1"
num-rational = "0.4"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
