[package]
name = "qcgpu-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qcgpu-grover"
path = "src/bin/grover.rs"

[[bin]]
name = "qcgpu-shor"
path = "src/bin/shor.rs"

[dependencies]
qcgpu = "0.1"
num-integer = "0.1"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
