[package]
name = "quantr-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantr-grover"
path = "src/bin/grover.rs"

[[bin]]
name = "quantr-shor"
path = "src/bin/shor.rs"

[dependencies]
quantr = "0.6"
num-integer = "0.1"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
